--- a/index.html
+++ b/index.html
@@ -78,25 +78,28 @@
                 <div class="skillset">
                     <img src="./img/skill/html.svg" alt="" />
                     <p>
-                       Proficient in creating semantically structured and accessible web pages.
+                        Proficient in creating semantically structured and accessible web pages.
                     </p>
                 </div>
                 <div class="skillset">
                     <img src="./img/skill/javascript.svg" alt="" />
                     <p>
-                        Experienced in client-side scripting, manipulating the DOM, and asynchronous programming with promises and async/await.
+                        Experienced in client-side scripting, manipulating the DOM, and asynchronous programming with
+                        promises and async/await.
                     </p>
                 </div>
                 <div class="skillset">
                     <img src="./img/skill/css.svg" alt="" />
                     <p>
-                        Skilled in styling websites with CSS, including responsive design and CSS frameworks like Bootstrap.
+                        Skilled in styling websites with CSS, including responsive design and CSS frameworks like
+                        Bootstrap.
                     </p>
                 </div>
                 <div class="skillset">
                     <img src="./img/skill/reactjs.svg" alt="" />
                     <p>
-                        Proficient in building dynamic and interactive user interfaces using ReactJs, including state management with hooks and Redux.
+                        Proficient in building dynamic and interactive user interfaces using ReactJs, including state
+                        management with hooks and Redux.
                     </p>
                 </div>
             </div>
@@ -106,35 +109,35 @@
         <section class="project">
             <h1>My projects</h1>
             <div class="pjtgallery">
-            <div class="gallery">
-                <a target="_blank" href="img_5terre.jpg">
-                    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
+                <div class="gallery">
+                    <a target="_blank" href="img_5terre.jpg">
+                        <img src="./img/projects/19.02.2024_14.20.09_REC.png" alt="" width="600" height="400">
+                    </a>
+                    <div class="desc">Add a description of the image here</div>
+                </div>
 
-            <div class="gallery">
-                <a target="_blank" href="img_forest.jpg">
-                    <img src="img_forest.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
+                <div class="gallery">
+                    <a target="_blank" href="img_forest.jpg">
+                        <img src="./img/projects/19.02.2024_14.20.55_REC.png" alt="" width="600" height="400">
+                    </a>
+                    <div class="desc">Add a description of the image here</div>
+                </div>
 
-            <div class="gallery">
-                <a target="_blank" href="img_lights.jpg">
-                    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
-            </div>
+                <div class="gallery">
+                    <a target="_blank" href="img_lights.jpg">
+                        <img src="./img/projects/19.02.2024_14.42.54_REC.png" alt="" width="600" height="400">
+                    </a>
+                    <div class="desc">Add a description of the image here</div>
+                </div>
 
-            <div class="gallery">
-                <a target="_blank" href="img_mountains.jpg">
-                    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-                </a>
-                <div class="desc">Add a description of the image here</div>
+                <div class="gallery">
+                    <a target="_blank" href="img_mountains.jpg">
+                        <img src="./img/projects/19.02.2024_15.28.02_REC.png" alt="" width="600" height="400">
+                    </a>
+                    <div class="desc">Add a description of the image here</div>
+                </div>
             </div>
-            </div>
-
+           
         </section>
         <section class="contact">
             <h1 class="scthead">Contact Me</h1>
