--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <body>
     <nav>
         <div class="nav">
-            <div class="logo">
-                <a class="anchor" href="#home"><img src="img/logo/logo.png" alt /></a>
-            </div>
+            
             <div class="menu">
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skill">Skill</a></li>
-                    <li><a href="#portfolio">Project</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Skill">Skill</a></li>
+                    <li><a href="#Gallery">Project</a></li>
 
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -33,46 +31,45 @@
             <div class="left">
                 <ul>
                     <li>
-                        <a href="#"><img src="./img/socials/facebook.svg" alt="" /></a>
+                        <a href="https://www.facebook.com/marvelous.obiji/"><img src="./img/socials/facebook.svg" alt="" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./img/socials/github.svg" alt="" /></a>
+                        <a href="https://github.com/Buzoor"><img src="./img/socials/github.svg" alt="" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./img/socials/instagram.svg" alt="" /></a>
+                        <a href="https://www.instagram.com/buzoor_/"><img src="./img/socials/instagram.svg" alt="" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./img/socials/twitter.svg" alt="" /></a>
+                        <a href="https://twitter.com/Buzoor_"><img src="./img/socials/twitter.svg" alt="" /></a>
                     </li>
                 </ul>
 
                 <h1 class="name">Marvelous Obiji</h1>
-                <p class="job">Web Designer based In New York</p>
+                <p class="job">Aspiring Software Engineer</p>
                 <div class="herobutton">
-                    <a class="anchor" href="#contact">Get Connected</a>
+                    <a class="anchor" href="#Contact">Get Connected</a>
                 </div>
             </div>
         </section>
         <br /><br>
         <hr />
-        <section class="about">
+        <section class="about" id="About">
 
             <h1 class="scthead">About Me</h1>
             <p>
-                Welcome to my portfolio! I'm Marvelous Obiji, an aspiring software engineer passionate about creating
+                 I'm Marvelous Obiji, an aspiring software engineer passionate about creating
                 engaging web experiences. With a foundation in HTML, CSS, JavaScript, and ReactJs, I thrive on turning
                 ideas into reality through code. I'm constantly seeking new challenges to expand my skills and
-                contribute to innovative projects. Whether it's crafting intuitive user interfaces or diving into
                 complex algorithms, I'm driven by a relentless pursuit of excellence in software development.
             </p>
-            <div class="foliox_tm_button">
-                <a class="anchor" href="#contact"><span>Get Connected</span></a>
+            <div class="aboutbutton">
+                <a class="anchor" href="#Contact"><span>Get Connected</span></a>
             </div>
 
         </section>
         <br /><br>
         <hr />
-        <section class="skill">
+        <section class="skill" id="Skill">
             <h1 class="scthead">Skill</h1>
             <div class="skills">
                 <div class="skillset">
@@ -106,40 +103,41 @@
         </section>
         <br /><br>
         <hr />
-        <section class="project">
+        <section class="project" id="Gallery">
             <h1>My projects</h1>
             <div class="pjtgallery">
                 <div class="gallery">
-                    <a target="_blank" href="img_5terre.jpg">
+                    <a target="_blank" href="https://movieapp-hng.netlify.app/">
                         <img src="./img/projects/19.02.2024_14.20.09_REC.png" alt="" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Movie App</div>
                 </div>
 
                 <div class="gallery">
-                    <a target="_blank" href="img_forest.jpg">
+                    <a target="_blank" href="https://admazi-ventures.netlify.app/">
                         <img src="./img/projects/19.02.2024_14.20.55_REC.png" alt="" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Simple banner</div>
                 </div>
 
                 <div class="gallery">
-                    <a target="_blank" href="img_lights.jpg">
+                    <a target="_blank" href="https://react-frontend-dev-card.netlify.app/">
                         <img src="./img/projects/19.02.2024_14.42.54_REC.png" alt="" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Office Card</div>
                 </div>
 
                 <div class="gallery">
-                    <a target="_blank" href="img_mountains.jpg">
+                    <a target="_blank" href="https://sample-e-site.netlify.app/">
                         <img src="./img/projects/19.02.2024_15.28.02_REC.png" alt="" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Funiture E-commerce site</div>
                 </div>
             </div>
            
         </section>
-        <section class="contact">
+        <br><hr><br>
+        <section class="contact" id="Contact">
             <h1 class="scthead">Contact Me</h1>
             <div class="container">
                 <div class="contactleft">
@@ -176,7 +174,7 @@
                                 </li>
                             </ul>
                             <textarea id="message" placeholder="Write your message here"></textarea>
-                            <button type="submit">Send Message</button>
+                            <button type="submit" > <a href="mailto:marvelousobiji@gmail.com">Send Message </a> </button>
                         </div>
                     </form>
                 </div>
@@ -187,20 +185,20 @@
     <hr />
     <br />
     <footer>
-        <ul>
-            <li>
-                <a href="#"><img src="./img/socials/facebook.svg" alt="" /></a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/socials/github.svg" alt="" /></a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/socials/instagram.svg" alt="" /></a>
-            </li>
-            <li>
-                <a href="#"><img src="./img/socials/twitter.svg" alt="" /></a>
-            </li>
-        </ul>
+       <ul>
+                    <li>
+                        <a href="https://www.facebook.com/marvelous.obiji/"><img src="./img/socials/facebook.svg" alt="" /></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Buzoor"><img src="./img/socials/github.svg" alt="" /></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/buzoor_/"><img src="./img/socials/instagram.svg" alt="" /></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/Buzoor_"><img src="./img/socials/twitter.svg" alt="" /></a>
+                    </li>
+                </ul>
         <br>
         <div class="container">
             <p>
